--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    {% block header %}{% endblock %}
     {% block body %}
     {% endblock %}
     <div id="content">{% block content %}{% endblock %}</div>
