--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 <!-- 1. extend from base-->
 
 {% block title %}
@@ -5,11 +6,16 @@
 {% endblock %}
 
 <!-- 2. extend content here from base -->
+{% block content %}
 <h1>Hi There! Welcome to Survey Monkey, the leading online survey site.</h1>
 <div class="main-container">
 	<h3>Let's get you logged in</h3>
-	<form> <!-- 3. needs to modify the form attributes here -->
+	<form action="/login" method="post"> <!-- 3. needs to modify the form attributes here -->
 		<!-- 4. add some input/labels here -->
+		<input class="action-button" id="login" type="text" name="username">
+		<input class="action-button" id="login" type="text" name="email">
 		<input class="action-button" id="login" type="submit" value="Submit">
+
 	</form>
 </div>
+{% endblock %}
