--- a/app/templates/survey.html
+++ b/app/templates/survey.html
@@ -17,6 +17,7 @@
 {% block content %}
 <!-- 1. extend from content block from the base-->
 	<form class="main-container"  action="/submit-survey" method="post">
+	<!-- <form class="main-container"  action="/submit-survey"> -->
 		<h3>Your Favorites</h3>
 		<label class="survey-item sm-label">Favorite color?
 			<input class="sm-input" type="text" name="color"></label>
