--- a/app/templates/bad_results.html
+++ b/app/templates/bad_results.html
@@ -23,7 +23,7 @@
 
 		<h3>But, it seems like your front end skillz are not improving...</h3>
 		<span class="result-item">Before IO Lab, your front end skillz were at a {{ surveyResponse['fe-before']}}</span>
-		<span class="result-item">And now they are still at {{ surveyResponse['fe-after']}}</span>
+		<span class="result-item">And now they are at {{ surveyResponse['fe-after']}}</span>
 
 	</div>
 {% endblock %}
